--- a/lang/java/tools/pom.xml
+++ b/lang/java/tools/pom.xml
@@ -198,14 +198,8 @@
                 <param>org.apache.avro.tool.CatTool</param>
               </targetClasses>
               <targetTests>
-                <param>org.apache.avro.tool.run_test</param>
+                <param>org.apache.avro.tool.CatToolRunTest</param>
               </targetTests>
-              <avoidCallsTo>
-                <avoidCallsTo>java.util.logging</avoidCallsTo>
-                <avoidCallsTo>org.apache.log4j</avoidCallsTo>
-                <avoidCallsTo>org.slf4j</avoidCallsTo>
-                <avoidCallsTo>org.apache.commons.logging</avoidCallsTo>
-              </avoidCallsTo>
             </configuration>
             <executions>
               <execution>
@@ -220,13 +214,14 @@
         </plugins>
       </build>
     </profile>
-      <profile>
-      <id>data-flow-test2</id>
+        <profile>
+      <id>data-flow-test</id>
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M6</version>
             <executions>
               <execution>
                 <goals>
@@ -236,7 +231,7 @@
             </executions>
             <configuration>
                 <argLine>
-                    -javaagent:/home/matteo/Programmi/Ba-Dua/ba-dua-agent-rt-0.7.0-all.jar
+                    -javaagent:/home/matteo/Programmi/Ba-Dua/ba-dua-agent-rt-0.6.0-all.jar
                 </argLine>
             </configuration>
           </plugin>
